# glfw

./: .appveyor.yml  .editorconfig  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  COPYING.txt  GLFW.idb  GLFW.lib  LICENSE  LICENSE.md  README.md  README.txt  appveyor.yml  biicode.cmake  biicode.conf  cmake_uninstall.cmake.in  conanfile_rtc.py  gl3w_gen.py  glfw.lua  glfw3.lib  install-deps.sh  make.ps1  meson.build  meson_options.txt  premake5.lua  readme.html  unitybuild.c
docs/: CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Doxyfile.in  DoxygenLayout.xml  Makefile  SUPPORT.md  build.dox  build.md  cleanup.bat  common.dox  compat.dox  compat.md  compile.dox  compile.md  context.dox  context.md  extra.css  extra.css.map  extra.less  extra.scss  footer.html  glext.dox  glfwdoc.sty  glfwrm.tex  glfwug.tex  header.html  hints.dox  input.dox  input.md  internal.dox  internal.md  intro.dox  intro.md  main.dox  main.md  metal.dox  monitor.dox  monitor.md  moving.dox  (+11 more)
examples/: CMakeLists.txt  areoBorderless.c  boing-opengles.c  boing.c  filters.c  gears-gles2.c  gears.c  getopt.c  glfw.aps  glfw.rc  heightmap.c  listmodes.c  metal.m  offscreen.c  particles.c  particles_osmesa.c  pen.c  pong3d.c  sharing.c  simple.c  simple_osmesa.c  splitview.c  transparent.c  triangle-opengl.c  triangle-webgpu.c  triangle.c  wave.c  wayland-widget.c  windows.c
examples/DeferredRendering/: DeferredRendering.vcxproj  DeferredRendering.vcxproj.filters  GLApplication.cpp  GLApplication.h  main.cpp
examples/PBO/: PBO.vcxproj  PBO.vcxproj.filters  ReadMe.txt  glInfo.cpp  main.cpp  stdafx.cpp
examples/ShadowMaps/: ShadowMapsDR.vcxproj
examples/bingimg/: 12shader_image_load_store.cpp  bingimg.vcxproj  gl_utils.cpp  gl_utils.h  main.cpp
examples/cocoa/: AppDelegate.h  AppDelegate.m  MainMenu.xib  main.m  plist.in
examples/fbo/: Timer.h  fbo.vcxproj  main.cpp  teapot.h
examples/fboblit/: Timer.cpp  fboblit.vcxproj  main.cpp
examples/fbodepth/: fbodepth.vcxproj  main.cpp
examples/fbomsaa/: fbomsaa.vcxproj  main.cpp
examples/fbostencil/: fbostencil.vcxproj  glInfo.h  main.cpp  teapot.h
examples/vbo/: WaveFunc.cpp  WaveFunc.h  glInfo.cpp  glext.h  main.cpp  vbo.vcxproj
glm/: CMakeLists.txt  ext.hpp  glm.hpp
glm/core/: _detail.hpp  _fixes.hpp  _swizzle.hpp  _swizzle_func.hpp  _vectorize.hpp  dummy.cpp  func_common.hpp  func_common.inl  func_exponential.hpp  func_exponential.inl  func_geometric.hpp  func_geometric.inl  func_integer.hpp  func_integer.inl  func_matrix.hpp  func_matrix.inl  func_noise.hpp  func_noise.inl  func_packing.hpp  func_packing.inl  func_trigonometric.hpp  func_trigonometric.inl  func_vector_relational.hpp  func_vector_relational.inl  hint.hpp  intrinsic_common.hpp  intrinsic_common.inl  intrinsic_exponential.hpp  intrinsic_exponential.inl  intrinsic_geometric.hpp  intrinsic_geometric.inl  intrinsic_matrix.hpp  intrinsic_matrix.inl  intrinsic_trigonometric.hpp  intrinsic_trigonometric.inl  intrinsic_vector_relational.hpp  intrinsic_vector_relational.inl  setup.hpp  type.hpp  type_float.hpp  (+36 more)
glm/gtc/: half_float.hpp  half_float.inl  matrix_access.hpp  matrix_access.inl  matrix_integer.hpp  matrix_inverse.hpp  matrix_inverse.inl  matrix_transform.hpp  matrix_transform.inl  noise.hpp  noise.inl  quaternion.hpp  quaternion.inl  random.hpp  random.inl  swizzle.hpp  swizzle.inl  type_precision.hpp  type_precision.inl  type_ptr.hpp  type_ptr.inl
glm/gtx/: associated_min_max.hpp  associated_min_max.inl  bit.hpp  bit.inl  closest_point.hpp  closest_point.inl  color_cast.hpp  color_cast.inl  color_space.hpp  color_space.inl  color_space_YCoCg.hpp  color_space_YCoCg.inl  compatibility.hpp  compatibility.inl  component_wise.hpp  component_wise.inl  constants.hpp  constants.inl  epsilon.hpp  epsilon.inl  euler_angles.hpp  euler_angles.inl  extend.hpp  extend.inl  extented_min_max.hpp  extented_min_max.inl  fast_exponential.hpp  fast_exponential.inl  fast_square_root.hpp  fast_square_root.inl  fast_trigonometry.hpp  fast_trigonometry.inl  gradient_paint.hpp  gradient_paint.inl  handed_coordinate_space.hpp  handed_coordinate_space.inl  inertia.hpp  inertia.inl  int_10_10_10_2.hpp  int_10_10_10_2.inl  (+80 more)
glm/virtrev/: xstream.hpp
src/: CMakeLists.txt  android_init.c  android_joystick.c  android_joystick.h  android_monitor.c  android_platform.h  android_window.c  cache.c  cache.h  clipboard.c  cocoa_clipboard.m  cocoa_enable.m  cocoa_fullscreen.m  cocoa_gamma.c  cocoa_gamma.m  cocoa_init.m  cocoa_input.m  cocoa_joystick.h  cocoa_joystick.m  cocoa_monitor.m  cocoa_native.m  cocoa_opengl.m  cocoa_platform.h  cocoa_time.c  cocoa_time.h  cocoa_window.m  config.h.cmake  config.h.in  context.c  display.c  egl_context.c  egl_context.h  egl_opengl.c  egl_platform.h  egldevice_init.c  egldevice_monitor.c  egldevice_platform.h  egldevice_window.c  enable.c  error.c  (+158 more)
src/carbon/: carbon_enable.c  carbon_glext.c  carbon_init.c  carbon_joystick.c  libglfw.pc.cmake  platform.h
src/cocoa/: CMakeLists.txt  cocoa_config.h.cmake  cocoa_enable.m  cocoa_fullscreen.m  cocoa_gamma.m  cocoa_glext.m  cocoa_init.m  cocoa_joystick.m  cocoa_opengl.m  cocoa_time.m  cocoa_window.m  libglfw.pc.cmake  platform.h
src/win32/: CMakeLists.txt  glfwdll_mgw1.def  glfwdll_mgw2.def  libglfw.pc.cmake  platform.h  win32_dllmain.c  win32_enable.c  win32_fullscreen.c  win32_gamma.c  win32_glext.c  win32_init.c  win32_joystick.c  win32_opengl.c  win32_time.c  win32_window.c
src/x11/: CMakeLists.txt  libglfw.pc.cmake  platform.h  x11_config.h.cmake  x11_enable.c  x11_fullscreen.c  x11_gamma.c  (+6 more)
testing/: CMakeLists.txt  test.cpp
tests/: CMakeLists.txt  accuracy.c  allocator.c  animate-icon.c  clipboard.c  cursor.c  cursoranim.c  defaults.c  dynamic.c  empty.c  events.c  fsaa.c  fsfocus.c  gamma.c  glfwinfo.c  glfwinfo.manifest  icon.c  iconify.c  icons.c  ime.c  input_text.c  inputlag.c  joysticks.c  listmodes.c  modes.c  monitors.c  msaa.c  native.c  opacity.c  options.c  options.txt  peter.c  reopen.c  sharing.c  tearing.c  text.c  theming.c  threads.c  timeout.c  title.c  (+9 more)
(+419 files in other folders)
